--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -48,7 +48,7 @@
 
       </div>
 
-      <div class="form-group"
+      <!--<div class="form-group"
            [ngClass]="{
           'has-danger': dob.invalid && (dob.dirty || dob.touched),
           'has-success': dob.valid && (dob.dirty || dob.touched)
@@ -62,7 +62,7 @@
           Date of Birth is required!
         </small>
 
-      </div>
+      </div>-->
 
       <div class="form-group"
            [ngClass]="{
@@ -103,6 +103,7 @@
 
       <button type="submit" class="btn btn-default form-control" [disabled]="!studentForm.valid" *ngIf="!studentIdToUpdate">CREATE</button>
       <button type="submit" class="btn btn-default form-control" [disabled]="!studentForm.valid" *ngIf="studentIdToUpdate">UPDATE</button>
+      <hr class="my-0">
       <button class="btn btn-sm" (click)="backToCreateStudent()" *ngIf="studentIdToUpdate">CREATE NEW STUDENT</button>
 
       <br/>
@@ -156,7 +157,7 @@
             <th scope="row">ID</th>
             <th class="th-lg">First Name<i class="fa fa-sort ml-1"></i></th>
             <th class="th-lg">Last Name<i class="fa fa-sort ml-1"></i></th>
-            <th class="th-lg">Date of Birth<i class="fa fa-sort ml-1"></i></th>
+            <!--<th class="th-lg">Date of Birth<i class="fa fa-sort ml-1"></i></th>-->
             <th class="th-lg">Age<i class="fa fa-sort ml-1"></i></th>
             <th class="th-lg">Gender<i class="fa fa-sort ml-1"></i></th>
             <th class="th-lg">Edit<i class="fa fa-sort ml-1"></i></th>
@@ -171,7 +172,7 @@
               <td>{{indexVal}}</td>
               <td>{{student.firstName}}</td>
               <td>{{student.lastName}}</td>
-              <td>{{student.dob}}</td>
+              <!--<td>{{student.dob}}</td>-->
               <td>{{student.age}}</td>
               <td>{{student.gender}}</td>
               <td>
@@ -188,49 +189,6 @@
       </div>
 
       <hr class="my-0">
-
-      <!--Bottom Table UI-->
-      <div class="d-flex justify-content-center">
-
-        <!--Pagination -->
-        <!--<nav class="my-4 pt-2">
-          <ul class="pagination pagination-circle pg-purple mb-0">
-
-            &lt;!&ndash;First&ndash;&gt;
-            <li class="page-item disabled clearfix d-none d-md-block"><a class="page-link">First</a></li>
-
-            &lt;!&ndash;Arrow left&ndash;&gt;
-            <li class="page-item disabled">
-              <a class="page-link" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-                <span class="sr-only">Previous</span>
-              </a>
-            </li>
-
-            &lt;!&ndash;Numbers&ndash;&gt;
-            <li class="page-item active"><a class="page-link">1</a></li>
-            <li class="page-item"><a class="page-link">2</a></li>
-            <li class="page-item"><a class="page-link">3</a></li>
-            <li class="page-item"><a class="page-link">4</a></li>
-            <li class="page-item"><a class="page-link">5</a></li>
-
-            &lt;!&ndash;Arrow right&ndash;&gt;
-            <li class="page-item">
-              <a class="page-link" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-                <span class="sr-only">Next</span>
-              </a>
-            </li>
-
-            &lt;!&ndash;First&ndash;&gt;
-            <li class="page-item clearfix d-none d-md-block"><a class="page-link">Last</a></li>
-
-          </ul>
-        </nav>-->
-        <!--/Pagination -->
-
-      </div>
-      <!--Bottom Table UI-->
 
     </div>
   </div>
